# xplot

./: .gitignore  README.md  custom_colors.json  custom_settings.json  install.sh  pyproject.toml  render_image.py  requirements.txt
.github/workflows/: publish-to-test-pypi.yml  python-publish.yml
atomsplot/: __init__.py  functions.py  render.py  settings.py
atomsplot/ase_custom/: __init__.py  atoms.py  espresso.py  extxyz.py  io.py  povray.py  vasp.py
atomsplot/cli/: main.py  parser.py
example/: image_settings.json
examples/: image_settings.json
examples/bonds/: DMAEMA.xyz  command.sh  image_settings.json
examples/colorcode_ccnum/: command.sh  image_settings.json  surf.pwi
examples/colorcode_magmom/: command.sh  image_settings.json
examples/depth_cueing_mol/: command.sh  image_settings.json
examples/depth_cueing_mols_auto/: Co.pwi  adsorbed.xsf  command.sh  graphene.xyz  image_settings.json
examples/depth_cueing_mols_colors/: Si_DLC.pwi  command.sh  image_settings.json
examples/depth_cueing_slab/: POSCAR  command.sh  image_settings.json
examples/isosurface/: command.sh  image_settings.json
examples/isosurface_transparent_atoms/: command.sh  image_settings.json
render_atoms/: ase_custom.py  functions.py  render_image  xplot
xplot/: __init__.py  functions.py  render.py  settings.py
xplot/ase_custom/: __init__.py  ase_custom_legacy.py  espresso.py  extxyz.py  io.py  povray.py  vasp.py  xyz.py
xplot/cli/: main.py  parser.py
